I have added a small picture that can tell the user which category the post is. I will try to resolve the issue as the why the cards are not aligning in a row and going to a column.

--- a/soen341webapp/client/main.css
+++ b/soen341webapp/client/main.css
@@ -10,6 +10,10 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px
     rgba(0,0,0,0.22);
 }
+.row{
+    display: inline-block;
+
+}
 
 /***-------------------------------------Style by ID------------------***/
 
